Userinfo fix (#35)
fix user info is overlapping with question info

--- a/askbot/media/style/style.css
+++ b/askbot/media/style/style.css
@@ -1416,6 +1416,7 @@ ul#searchTags {
   line-height: 16px;
   font-family: Arial;
   padding-right: 4px;
+  padding-top: 20px;
 }
 .short-summary .userinfo .timeago,
 .short-summary span.anonymous {
@@ -5346,7 +5347,7 @@ td.setting-input textarea {
     line-height: 10px;
     font-family: "Microsoft YaHei", STXihei, serif;
     padding-right: 4px;
-    padding-top: 4px;
+    padding-top: 20px;
   }
   .short-summary .counts .item-count {
     padding: 0px 1px 0px 1px;
